Improve texts on a home page

--- a/src/GeoWebApp/Views/Home/Index.cshtml
+++ b/src/GeoWebApp/Views/Home/Index.cshtml
@@ -3,7 +3,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h2>
-    WebApp is hosted in the <b>@ViewBag.DataCenter</b> data center
-</h2>
-<p>Current environment is <b>@hostingEnv.EnvironmentName</b></p>
+
+<div class="jumbotron">
+    <h1>Hello, application is loaded from the <b>@ViewBag.DataCenter</b> data center!</h1>
+    <p>
+        This is an example of geo-distributed web application using Azure Traffic Manager. Please, check my blog to get more details
+    </p>
+    <p>
+        <a class="btn btn-primary btn-lg" href="http://backend-devs.com/blog/archive/multi-regional-aspnet-core-with-azure-traffic-manager/" role="button">Blog post</a>
+        <a class="btn btn-info btn-lg" href="https://github.com/dimonser147/GeoWebApp" role="button">GitHub repository</a>
+    </p>
+</div>
