--- a/src/GeoWebApp/Views/Shared/_Layout.cshtml
+++ b/src/GeoWebApp/Views/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Hosting.IHostingEnvironment hostingEnv
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - GeoWebApp</title>
+    <title>@ViewData["Title"] - Geo-distributed web application </title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,12 +27,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GeoWebApp</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Geo-distributed web application</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                 </ul>
             </div>
         </div>
@@ -40,7 +41,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - GeoWebApp</p>
+            <p>&copy; @DateTime.UtcNow.Year - <a href="http://backend-devs.com/">Backend Devs</a>, 
+            current environment is <b>@hostingEnv.EnvironmentName</b></p>
         </footer>
     </div>
 
